--- a/html/compressor.html
+++ b/html/compressor.html
@@ -23,8 +23,9 @@
         </ul>
 
         <!-- Login Button -->
-        <button class="login-button">LOGIN</button>
-                <!-- Hamburger Icon -->
+        <button class="login-button"><a href="login.html"
+            style="text-decoration: none; color: #1c1c1c;">LOGIN</a></button>
+        <!-- Hamburger Icon -->
         <button class="hamburger-icon" onclick="toggleMenu()">
           &#9776; <!-- Unicode for hamburger icon -->
         </button>
