--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,8 @@
         </ul>
 
         <!-- Login Button -->
-        <button class="login-button">LOGIN</button>
+        <button class="login-button"><a href="login.html"
+            style="text-decoration: none; color: #1c1c1c;">LOGIN</a></button>
         <!-- Hamburger Icon -->
         <button class="hamburger-icon" onclick="toggleMenu()">
           &#9776; <!-- Unicode for hamburger icon -->
