--- a/html/login.html
+++ b/html/login.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<!-- nav bar-->
     <nav class="navbar">
         <div class="container">
             <div class="navbar-container">
