--- a/html/converter.html
+++ b/html/converter.html
@@ -18,7 +18,7 @@
         <!-- Navigation Links -->
         <ul class="navbar-menu">
           <li><a href="compressor.html" class="navbar-link">COMPRESSOR</a></li>
-          <li><a href="converter.html" class="navbar-link active">CONVERTER</a></li>
+          <li><a href="converter.html" class="navbar-link">CONVERTER</a></li>
           <li><a href="index.html" class="navbar-link">SHORTENER</a></li>
         </ul>
 
@@ -57,19 +57,56 @@
       </div>
     </div> -->
 
-    <div class="text"
-      style="display: flex; flex-direction: column; padding: 0px; margin: 0px; justify-content: center; align-items: center;">
+<div class="text-container">
+  <h1>Convert <span class="underlined underline-clip">file</span><br>with <span class="underlined underline-mask">Ease</span><br></h1>
+  <p class="description">Tired of struggling to find the right file format? At hie.li, we support a wide range of file conversions, from documents and images to audio and video files. Simply upload your file, choose the format you need, and get your converted file in seconds!</p>
+</div>
 
-      <h1>Convert <span class="underlined underline-clip">file</span><br>with<span
-          class="underlined underline-mask">Ease</span><br></h1>
+<style>
+  .text-container {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
 
-      <!-- <span class="underlined underline-overflow">NFTs</span> -->
-      <p style="width: 600px; color:#8c8c8c70; margin: 0px; padding-bottom: 30px; ">Tired of struggling to find the
-        right file
-        format? At hie.li, we support a wide range of file conversions, from
-        documents and images to audio and video files. Simply upload your file, choose the format you need, and get your
-        converted file in seconds!</p>
-    </div>
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  .description {
+    width: 90%;
+    max-width: 600px;
+    color: #8c8c8c;
+    margin: 0;
+    padding-bottom: 1.5rem;
+  }
+
+  @media (min-width: 768px) {
+    h1 {
+      font-size: 3rem;
+    }
+
+    .description {
+      font-size: 1.1rem;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    h1 {
+      font-size: 4rem;
+    }
+
+    .description {
+      font-size: 1.2rem;
+    }
+  }
+</style>
+
 
 
     <div style="display: flex; flex-direction: row; align-items: center; gap: 10px;">
