--- a/html/login.html
+++ b/html/login.html
@@ -23,7 +23,7 @@
             </div>
         </div>
     </nav>
-    <main style="display: flex; flex-direction: column; align-items: center; padding: 50px 20px;">
+    <main style="display: flex; flex-direction: column; align-items: center; padding: 50px 20px; margin-top: 10rem; margin-bottom: 10rem;">
         <!-- <a href="#" style="color: #666; text-decoration: none; margin-bottom: 30px;">← Back</a> -->
 
         <div style="text-align: center; max-width: 400px; width: 100%;">
