--- a/html/converter.html
+++ b/html/converter.html
@@ -272,6 +272,7 @@
 </style>
 
   <!-- Footer -->
+  <!-- Footer -->
   <footer class="footer">
     <p class="footer-text">
       Copyright &copy; 2024 <a href="#">hie.li</a>. All rights reserved.
